@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9932';
+our $VERSION='0.9933';
 
 
 use 5.005;
